test/classes/errors/nilability-assign/assign-nonnil-shared-from-nonnil-borrowed.good
assign-nonnil-shared-from-nonnil-borrowed.chpl:8: error: Cannot assign to shared MyClass from borrowed MyClass
